# substrate-api-client-practice

./: Cargo.toml
src/: main.rs
