[package]
name = "substrate-api-client-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
futures = "0.3.29"
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", default-features = false, features = [
    "jsonrpsee-client",
    "staking-xt",
    "contracts-xt",
] }
tokio = { version = "1.34.0", features = ["full"] }
